src/test/ui/specialization/issue-50452.stderr
error[E0520]: `foo` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/issue-50452.rs:11:5
   |
LL |       fn foo() {}
   |       ^^^^^^^^^^^ cannot specialize default item `foo`
...
LL | / impl<T> Foo for T {
LL | |     fn foo() {}
LL | | }
   | |_- parent `impl` is here
   |
   = note: to specialize, `foo` in the parent `impl` must be marked `default`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0520`.
